[gd_scene load_steps=3 format=3 uid="uid://dvokma8gp3f3u"]

[ext_resource type="Script" uid="uid://dns3b657afidd" path="res://scripts/Main.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.15, 0.15, 0.15, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 160.0
offset_right = -40.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 52
text = "RevenueCat Plugin Test"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="Content" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 28

[node name="SectionInitialize" type="PanelContainer" parent="VBoxContainer/ScrollContainer/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SectionInitializeVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionInitialize"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="SectionInitializeTitle" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionInitialize/SectionInitializeVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Initialize"

[node name="SectionInitializeDesc" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionInitialize/SectionInitializeVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Configure the RevenueCat SDK with API key, user and debug mode."
autowrap_mode = 3

[node name="ApiKeyLabel" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionInitialize/SectionInitializeVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "API Key:"

[node name="ApiKeyEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/Content/SectionInitialize/SectionInitializeVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
placeholder_text = "appl_..."
caret_blink = true
caret_blink_interval = 0.5

[node name="UserIdLabel" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionInitialize/SectionInitializeVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "User ID (optional):"

[node name="UserIdEdit" type="LineEdit" parent="VBoxContainer/ScrollContainer/Content/SectionInitialize/SectionInitializeVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
placeholder_text = "user_123"
caret_blink = true
caret_blink_interval = 0.5

[node name="DebugCheck" type="CheckBox" parent="VBoxContainer/ScrollContainer/Content/SectionInitialize/SectionInitializeVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Enable debug"

[node name="InitializeButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionInitialize/SectionInitializeVBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Initialize RevenueCat"

[node name="SectionCustomerInfo" type="PanelContainer" parent="VBoxContainer/ScrollContainer/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SectionCustomerInfoVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionCustomerInfo"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="SectionCustomerInfoTitle" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionCustomerInfo/SectionCustomerInfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Customer Info"

[node name="SectionCustomerInfoDesc" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionCustomerInfo/SectionCustomerInfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Calls get_customer_info() and also receives updates."
autowrap_mode = 3

[node name="GetCustomerInfoButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionCustomerInfo/SectionCustomerInfoVBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Get Customer Info"

[node name="SectionPurchases" type="PanelContainer" parent="VBoxContainer/ScrollContainer/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SectionPurchasesVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionPurchases"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="SectionPurchasesTitle" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionPurchases/SectionPurchasesVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Purchase"

[node name="SectionPurchasesDesc" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionPurchases/SectionPurchasesVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Performs purchase(product_id)."
autowrap_mode = 3

[node name="PurchasesProductId" type="LineEdit" parent="VBoxContainer/ScrollContainer/Content/SectionPurchases/SectionPurchasesVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
placeholder_text = "product_id"
caret_blink = true
caret_blink_interval = 0.5

[node name="PurchaseButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionPurchases/SectionPurchasesVBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Purchase"

[node name="SectionOfferings" type="PanelContainer" parent="VBoxContainer/ScrollContainer/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SectionOfferingsVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionOfferings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="SectionOfferingsTitle" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionOfferings/SectionOfferingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Offerings"

[node name="SectionOfferingsDesc" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionOfferings/SectionOfferingsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Calls fetch_offerings()."
autowrap_mode = 3

[node name="FetchOfferingsButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionOfferings/SectionOfferingsVBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Fetch Offerings"

[node name="SectionProducts" type="PanelContainer" parent="VBoxContainer/ScrollContainer/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SectionProductsVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionProducts"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="SectionProductsTitle" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionProducts/SectionProductsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Products"

[node name="SectionProductsDesc" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionProducts/SectionProductsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "fetch_products(ids). Separate IDs with comma."
autowrap_mode = 3

[node name="FetchProductsHBox" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionProducts/SectionProductsVBox"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="FetchProductsIds" type="LineEdit" parent="VBoxContainer/ScrollContainer/Content/SectionProducts/SectionProductsVBox/FetchProductsHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
placeholder_text = "product_1, product_2"
caret_blink = true
caret_blink_interval = 0.5

[node name="FetchProductsButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionProducts/SectionProductsVBox/FetchProductsHBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Fetch Products"

[node name="SectionLogin" type="PanelContainer" parent="VBoxContainer/ScrollContainer/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SectionLoginVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionLogin"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="SectionLoginTitle" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionLogin/SectionLoginVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Login / Logout"

[node name="SectionLoginDesc" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionLogin/SectionLoginVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "login(user_id) / logout()"
autowrap_mode = 3

[node name="LoginHBox" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionLogin/SectionLoginVBox"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="LoginUserId" type="LineEdit" parent="VBoxContainer/ScrollContainer/Content/SectionLogin/SectionLoginVBox/LoginHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
placeholder_text = "user_123"
caret_blink = true
caret_blink_interval = 0.5

[node name="LoginButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionLogin/SectionLoginVBox/LoginHBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Login"

[node name="LogoutButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionLogin/SectionLoginVBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Logout"

[node name="SectionEntitlements" type="PanelContainer" parent="VBoxContainer/ScrollContainer/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SectionEntitlementsVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionEntitlements"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="SectionEntitlementsTitle" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Entitlements"

[node name="SectionEntitlementsDesc" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "is_subscriber() and has_entitlement(id)."
autowrap_mode = 3

[node name="IsSubscriberButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Is Subscriber?"

[node name="HasEntitlementHBox" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HasEntitlementId" type="LineEdit" parent="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox/HasEntitlementHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
text = "premium"
placeholder_text = "entitlement_id"
caret_blink = true
caret_blink_interval = 0.5

[node name="HasEntitlementButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox/HasEntitlementHBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Has Entitlement?"

[node name="CheckEntitlementButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox/HasEntitlementHBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Check Entitlement"

[node name="SectionPaywall" type="PanelContainer" parent="VBoxContainer/ScrollContainer/Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SectionPaywallVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionPaywall"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="SectionPaywallTitle" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionPaywall/SectionPaywallVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Paywall (UI)"

[node name="SectionPaywallDesc" type="Label" parent="VBoxContainer/ScrollContainer/Content/SectionPaywall/SectionPaywallVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "present_paywall(offering_id)."
autowrap_mode = 3

[node name="PaywallHBox" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/Content/SectionPaywall/SectionPaywallVBox"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PaywallOfferingId" type="LineEdit" parent="VBoxContainer/ScrollContainer/Content/SectionPaywall/SectionPaywallVBox/PaywallHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
placeholder_text = "offering_id (optional)"
caret_blink = true
caret_blink_interval = 0.5

[node name="PaywallButton" type="Button" parent="VBoxContainer/ScrollContainer/Content/SectionPaywall/SectionPaywallVBox/PaywallHBox"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "Present Paywall"

[node name="LogLabel" type="Label" parent="VBoxContainer/ScrollContainer/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Log"

[node name="LogOutput" type="TextEdit" parent="VBoxContainer/ScrollContainer/Content"]
custom_minimum_size = Vector2(0, 1000)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 22
editable = false
wrap_mode = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="ClearLogButton" type="Button" parent="VBoxContainer/ScrollContainer/Content"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 26
text = "Clear Log"

[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionInitialize/SectionInitializeVBox/InitializeButton" to="." method="_on_initialize_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionCustomerInfo/SectionCustomerInfoVBox/GetCustomerInfoButton" to="." method="_on_get_customer_info_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionPurchases/SectionPurchasesVBox/PurchaseButton" to="." method="_on_purchase_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionOfferings/SectionOfferingsVBox/FetchOfferingsButton" to="." method="_on_fetch_offerings_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionProducts/SectionProductsVBox/FetchProductsHBox/FetchProductsButton" to="." method="_on_fetch_products_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionLogin/SectionLoginVBox/LoginHBox/LoginButton" to="." method="_on_login_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionLogin/SectionLoginVBox/LogoutButton" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox/IsSubscriberButton" to="." method="_on_is_subscriber_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox/HasEntitlementHBox/HasEntitlementButton" to="." method="_on_has_entitlement_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionEntitlements/SectionEntitlementsVBox/HasEntitlementHBox/CheckEntitlementButton" to="." method="_on_check_entitlement_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/SectionPaywall/SectionPaywallVBox/PaywallHBox/PaywallButton" to="." method="_on_present_paywall_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/Content/ClearLogButton" to="." method="_on_clear_log_pressed"]
